--- a/Handout_Task-Queue/Motor2D/Motor2D.vcxproj.filters
+++ b/Handout_Task-Queue/Motor2D/Motor2D.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="j1TaskQueue.h">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="j1Animation.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Programacio 2 ===========">
