--- a/Handout_Task-Queue/Motor2D/Motor2D.vcxproj
+++ b/Handout_Task-Queue/Motor2D/Motor2D.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="j1TaskQueue.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="j1Animation.h" />
     <ClInclude Include="j1Entity.h" />
     <ClInclude Include="j1Map.h" />
     <ClInclude Include="j1Player.h" />
